--- a/src/components/UI/MyButton/MyButton.css
+++ b/src/components/UI/MyButton/MyButton.css
@@ -1,12 +1,17 @@
-.btn-login {
-    width: 110px;
-    height:40px;
-    background: #EF0008;
+.btn {
     border: none;
     border-radius: 10px;
     color: #fff;
     font-family: 'Montserrat';
     font-style: normal;
+    cursor: pointer;
+}
+
+
+.btn-login {
+    width: 110px;
+    height:40px;
+    background: #EF0008;
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
@@ -22,16 +27,10 @@
     width: 250px;
     height:40px;
     background: #EF0008;
-    border-radius: 10px;
-    border: none;
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
     letter-spacing: -0.05em;
-
-    color: #FFFFFF;
 }
 
 .btn-card-order-sub {
@@ -39,17 +38,8 @@
     width:250px;
     height:40px;
     background: #46D68C;
-    border-radius: 10px;
-    border: none;
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-    /* identical to box height */
-
     letter-spacing: -0.05em;
-    cursor: pointer;
-
-    color: #FFFFFF;
 }
